# sleef-trig

./: .gitignore  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml
benches/: cosf1_u35purec_range125.rs  sind1_u35purec.rs  sind2_u35sse2.rs  sind4_u35avx.rs  sinf1_u35purec_range125.rs  sleef-f64x2.rs
c/: sleef_sind1_u35purec.c  sleef_sind2_u35sse2.c
headers/: sleefinline_purec_scalar.h
sleef-trig/: Cargo.toml
sleef-trig-sys/: Cargo.toml  README.md  build.rs
sleef-trig-sys/c/: avx.c  purec.c  sse2.c  x86_64.c
sleef-trig-sys/c/include/: sleefinline_avx.h  sleefinline_purec_scalar.h  sleefinline_sse2.h
sleef-trig-sys/src/: lib.rs
sleef-trig/benches/: cosf1_u35purec_range125.rs  f32_purec.rs  f64_sse2.rs  sind1_u35purec.rs  sind4_u35avx.rs  sinf1_u35purec_range125.rs  sleef-f64x2.rs
sleef-trig/src/: f32_purec.rs  f64_avx.rs  f64_purec.rs  f64_sse2.rs  f64_tables.rs  lib.rs
src/: avx.rs  f32_purec.rs  f64_avx.rs  f64_purec.rs  f64_sse2.rs  fallback.rs  lib.rs  main.rs  sind4_u35avx.rs  sinf1_u35purec_range125.rs  tables.rs
