[package]
name = "sleef-trig-sys"
version = "0.1.0"
description = "Bindings to a few sleef.org trigonometric functions"
edition = "2021"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "BSL-1.0"
readme = "README.md"
repository = "https://github.com/greatest-ape/sleef-trig"
keywords = ["math", "trigonometry", "audio", "ffi"]
categories = ["mathematics", "external-ffi-bindings"]
exclude = ["./c/test_sleef_sind1_u35purec.c", "./c/test_sleef_sind2_u35sse2.c"]

[build-dependencies]
cc = "1.0"
