[package]
name = "sleef-trig"
version = "0.1.0"
description = "Port of a few sleef.org trigonometric functions"
edition = "2021"
authors = ["Joakim Frostegård <joakim.frostegard@gmail.com>"]
license = "BSL-1.0"
readme = "../README.md"
repository = "https://github.com/greatest-ape/sleef-trig"
keywords = ["math", "trigonometry", "audio"]
categories = ["mathematics"]
exclude = ["./src/main.rs"]

[[bench]]
name = "f32_purec"
harness = false

[[bench]]
name = "f64_purec"
harness = false

[[bench]]
name = "f64_sse2"
harness = false

[[bench]]
name = "f64_avx"
harness = false

[dev-dependencies]
criterion = "0.4"
quickcheck = "1"
sleef-trig-sys = { version = "0.1.0", path = "../sleef-trig-sys" }
